--- a/login.html
+++ b/login.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="assets/css/login.css">
+  <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
+  <script src="assets/lib/layui/layui.all.js"></script>
+  <script src="assets/lib/jquery.js"></script>
+  <script src="assets/js/login.js"></script>
+
 </head>
+
 <body>
-  
+  <!-- 头部logo -->
+  <div class="layui-main">
+    <img src="assets/images/logo.png" alt="logo">
+  </div>
+
+  <!-- 登录注册区域 -->
+  <div class="loginBox">
+    <div class="title-box"></div>
+    <!--  注册 -->
+    <div class="reg-Box">
+      <form class="layui-form" id="f1">
+        <!-- 用户名 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
+            class="layui-input">
+        </div>
+        <!-- 密码 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+            autocomplete="off" class="layui-input">
+        </div>
+        <!-- 确认密码 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="repassword" name="title" required lay-verify="required|repwd" placeholder="请再次输入密码"
+            autocomplete="off" class="layui-input">
+        </div>
+        <!-- 按钮  -->
+        <div class="layui-form-item">
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+        </div>
+        <div class="layui-form-item links"><a href="javascript:;" id="linkReg">去登录</a></div>
+      </form>
+    </div>
+    <!-- 登录 -->
+    <div class="login-Box">
+      <!-- 登录框表单区域 -->
+      <form class="layui-form" id="f2">
+        <!-- 用户名 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
+            class="layui-input">
+        </div>
+        <!-- 密码 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+            autocomplete="off" class="layui-input">
+        </div>
+        <!-- 按钮  -->
+        <div class="layui-form-item">
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+        </div>
+        <!-- 去注册页面 -->
+        <div class="layui-form-item links">
+          <a href="javascript:;" id="linkLogin">
+            去注册账号
+          </a></div>
+      </form>
+    </div>
+  </div>
 </body>
+
 </html>
