--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
   <script src="assets/lib/layui/layui.all.js"></script>
   <script src="assets/lib/jquery.js"></script>
+  <SCript src="assets/js/baseAPI.js"></SCript>
   <script src="assets/js/login.js"></script>
 
 </head>
