--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
   <link rel="stylesheet" href="assets/css/index.css">
   <link rel="stylesheet" href="assets/fonts/iconfont.css">
+
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             <span class="text-avatar">A</span>个人中心
           </a>
           <dl class="layui-nav-child">
-            <dd><a href="">基本资料</a></dd>
+            <dd><a href="user/user.html" target="fm">基本资料</a></dd>
             <dd><a href="">更换头像</a></dd>
             <dd><a href="">重置密码</a></dd>
           </dl>
@@ -56,9 +57,9 @@
           <li class="layui-nav-item">
             <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-friends"></i>基本资料</a></dd>
+              <dd><a href="user/user.html" target="fm"><i class="layui-icon layui-icon-friends"></i>基本资料</a></dd>
               <dd><a href="javascript:;"><i class="layui-icon layui-icon-face-smile"></i>更换头像</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-password"></i>重置密码</a></dd>
+              <dd><a href="user/userpwd.html" target="fm"><i class="layui-icon layui-icon-password"></i>重置密码</a></dd>
             </dl>
           </li>
         </ul>
