--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/index.css">
   <link rel="stylesheet" href="assets/fonts/iconfont.css">
 
+
 </head>
 
 <body>
@@ -26,8 +27,8 @@
           </a>
           <dl class="layui-nav-child">
             <dd><a href="user/user.html" target="fm">基本资料</a></dd>
-            <dd><a href="">更换头像</a></dd>
-            <dd><a href="">重置密码</a></dd>
+            <dd><a href="user/heads.html" target="fm">更换头像</a></dd>
+            <dd><a href="user/userpwd.html" target="fm">重置密码</a></dd>
           </dl>
         </li>
         <li class="layui-nav-item "><a href="javascript:;" id="tuichu"><span class="iconfont icon-tuichu"></span>退出</a>
@@ -58,7 +59,7 @@
             <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
             <dl class="layui-nav-child">
               <dd><a href="user/user.html" target="fm"><i class="layui-icon layui-icon-friends"></i>基本资料</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-face-smile"></i>更换头像</a></dd>
+              <dd><a href="user/heads.html" target="fm"><i class="layui-icon layui-icon-face-smile"></i>更换头像</a></dd>
               <dd><a href="user/userpwd.html" target="fm"><i class="layui-icon layui-icon-password"></i>重置密码</a></dd>
             </dl>
           </li>
