--- a/user/userpwd.html
+++ b/user/userpwd.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
   <link rel="stylesheet" href="../assets/css/user.css">
+  <link rel="stylesheet" href="../assets/lib/cropper/cropper.css">
 </head>
 
 <body>
@@ -40,7 +41,7 @@
         </div>
         <div class="layui-form-item">
           <div class="layui-input-block">
-            <button type="button" class="layui-btn" lay-submit lay-filter="formDemo" id="btnsubmit">确认修改</button>
+            <button type="submit" class="layui-btn" lay-submit lay-filter="formDemo" id="btnsubmit">确认修改</button>
             <button type="reset" class="layui-btn layui-btn-primary" id="btnreset">重置</button>
           </div>
         </div>
@@ -49,6 +50,8 @@
   </div>
   <script src="../assets/lib/jquery.js"></script>
   <script src="../assets/lib/layui/layui.all.js"></script>
+  <script src="/assets/lib/cropper/Cropper.js"></script>
+  <script src="../assets/lib/cropper/jquery-cropper.js"></script>
   <script src="../assets/js/baseAPI.js"></script>
   <script src="../assets/js/userpwd.js"></script>
 </body>
