--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
           <li class="layui-nav-item">
             <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-template-1"></i>文章类别</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-list"></i>文章列表</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-read"></i>发表文章</a></dd>
+              <dd><a href="article/articleClass.html" target="fm"><i
+                    class="layui-icon layui-icon-template-1"></i>文章类别</a>
+              </dd>
+              <dd><a href="article/articleList.html" target="fm"><i class="layui-icon layui-icon-list"></i>文章列表</a></dd>
+              <dd><a href="article/article.html" target="fm"><i class="layui-icon layui-icon-read"></i>发表文章</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item">
