--- a/article/articleList.html
+++ b/article/articleList.html
@@ -14,12 +14,30 @@
   <div class="layui-card">
     <div class="layui-card-header">文章列表</div>
     <div class="layui-card-body">
-      <!-- <select name="city" lay-verify="">
-        <option value="">请选择一个城市</option>
-        <option value="010">北京</option>
-        <option value="021">上海</option>
-        <option value="0571">杭州</option>
-      </select> -->
+      <!-- 筛选区 -->
+      <form class="layui-form" action="">
+        <div class="layui-form-item layui-inline">
+          <select name="cate_id" id="allchoose">
+            <option value="">所有分类</option>
+          </select>
+          <!-- 模板引擎 -->
+          <script type="text/html" id="allsclass">
+              {{each data}}
+                <option value="{{$value.Id}}">{{$value.name}}</option>
+            {{/each}}
+          </script>
+        </div>
+        <div class="layui-form-item layui-inline">
+          <select name="state" id="allstate">
+            <option value="">所有状态</option>
+            <option value="已发布">已发布</option>
+            <option value="草稿">草稿</option>
+          </select>
+        </div>
+        <div class="layui-form-item layui-inline">
+          <button type="button" class="layui-btn" id="choose">筛选</button>
+        </div>
+      </form>
       <!-- 列表 -->
       <table class="layui-table">
         <colgroup>
@@ -39,8 +57,12 @@
         <tbody id="addbook">
         </tbody>
       </table>
+      <!-- 分页区域 -->
+      <div id="pageBox"></div>
     </div>
   </div>
+
+
   <!-- 模板引擎 -->
   <script type="text/html" id="listF">
     {{each data}}
@@ -49,11 +71,9 @@
       <th>{{$value.cate_name}}</th>
       <th>{{$value.pub_date|dataFormat}}</th>
       <th>{{$value.state}}</th>
-      <th>   <button type="button" class="layui-btn  layui-btn-danger layui-btn-sm" id="edit" data-id="{{$value.Id}}">编辑</button>
-        <button type="button" class="layui-btn layui-btn-warm layui-btn-sm" data-id="{{$value.Id}}"" id="btnDelete">删除</button></th>
-   
+      <th >   <button type="button" class="layui-btn  layui-btn-danger layui-btn-sm" id="edit" data-id="{{$value.Id}}">编辑</button>
+        <button type="button" class="layui-btn layui-btn-warm layui-btn-sm btn-del" data-id="{{$value.Id}}"" id="btnDelete">删除</button></th>
     </tr>
-
     {{/each}}
   </script>
   <script src="../assets/lib/layui/layui.all.js"></script>
